Bug 48050 - Doesn't signal peer if local SOCKS5 bytestream preparation fails
Summary: Doesn't signal peer if local SOCKS5 bytestream preparation fails
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: gabble (show other bugs)
Version: git master
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL: http://cgit.collabora.com/git/user/wj...
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2012-03-29 08:07 UTC by Will Thompson
Modified: 2012-12-06 15:02 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Will Thompson 2012-03-29 08:07:31 UTC
While testing tubes using an XMPP server on localhost without a network connection, I found that the initiator neither falls back to in-band bytestreams upon discovering that there are no (non-loopback) local interfaces, not signals the recipient to say that the channel is dead.

Thus began a journey through the hairier corners of SI and the bytestream code, culminating in a standards-incompliant fix for this edge case.
Comment 1 Will Thompson 2012-03-29 08:09:10 UTC
Reassuring diffstat; extensive commit messages.

% git diff --stat 47999-handle-ibb-errors..48050-fallback
 src/bytestream-factory.c |   92 ++++++++----------------
 src/bytestream-factory.h |    6 +-
 src/bytestream-socks5.c  |  176 ++++++++++++++++++++++++++--------------------
 src/ft-channel.c         |   15 ++---
 src/tube-dbus.c          |   11 +---
 src/tube-stream.c        |   13 +---
 6 files changed, 145 insertions(+), 168 deletions(-)
Comment 2 Will Thompson 2012-11-05 14:02:26 UTC
hai?


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.